--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -2490,7 +2490,7 @@ textarea.form-control-lg {
 
 .form-select {
     display: block;
-    width: 100%;
+    width: 150px;
     padding: 0.375rem 2.25rem 0.375rem 0.75rem;
     -moz-padding-start: calc(0.75rem - 3px);
     font-size: 1rem;
@@ -5236,6 +5236,7 @@ textarea.form-control-lg {
     display: flex;
     padding-left: 0;
     list-style: none;
+    justify-content: center;
 }
 
 .page-link {
@@ -11931,6 +11932,7 @@ textarea.form-control-lg {
 }
 
 .body-menu {
+    padding-top: 10px;
     text-align: right;
 }
 
@@ -11941,6 +11943,17 @@ textarea.form-control-lg {
 
 .profile {
     border-radius: 70%;
+}
+
+.table-menu{
+    padding-bottom: 20px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.search{
+    display: flex;
 }
 
 .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
