css 적용 : 병합된 게시판 적용
커뮤니티 게시판 목록, 병원 목록, 헤더, 공지사항 세부, 공지사항 리스트, qna 리스트

--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -11956,6 +11956,10 @@ textarea.form-control-lg {
     display: flex;
 }
 
+a {
+    text-decoration: none;
+}
+
 .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
 .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
 .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #238CFA;background: #238CFA url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
